# thesis

./: .gitignore  LICENSE  get_secrets.py  pyproject.toml
replicate_MVF/: get_foul_dataset.py  main.py  pyproject.toml  todo.md  train_the_fucker.py  try_the_fucker.py  utils.py
replicate_MVF-1/: foul_model.py  readme.md
replicate_MVF/configs/pool/backbone/: tadaformer_l14_soccer.yaml
replicate_MVF/configs/pool/run/training/: finetune_soccer.yaml  from_scratch_large.yaml
replicate_MVF/configs/projects/tadaformer/: tadaformer_l14_k400_16f.yaml  tadaformer_l14_soccer.yaml
replicate_MVF/data/kinetics710/: k400_val_list_videos.txt  k600_val_list_videos.txt  k700_val_list_videos.txt  map_k600.json  map_k700.json
replicate_MVF/runs/: train.py
replicate_MVF/tadaconv/datasets/base/: __init__.py  builder.py  epickitchen100.py  epickitchen100_feature.py  hmdb51.py  imagenet.py  kinetics400.py  mvfoul.py  ssv2.py  ucf101.py
replicate_MVF/tadaconv/models/base/: backbone.py  builder.py  models.py
replicate_MVF/tadaconv/models/module_zoo/heads/: __init__.py  foul_head.py
replicate_MVF/tadaconv/utils/: bucket.py  config.py  mvfoul_translation.py
